--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root">
+      <nav id="main-nav" class="sidebar">
+        <a href="/" onclick="route()">Home</a>
+        <a href="/about" onclick="route()">About</a>
+        <a href="/cv" onclick="route()">CV</a>
+      </nav>
+      <div id="main-page"></div>
+    </div>
+    <!-- <button id="alert" onclick="sendAlert()">Aldert</button> -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
